--- a/LDA/LDA/Base.lproj/Main.storyboard
+++ b/LDA/LDA/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="roboto_regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -41,16 +46,27 @@
                                                     <action selector="segmentControlAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="Fdd-ao-ksM"/>
                                                 </connections>
                                             </segmentedControl>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JbT-1L-apS">
+                                                <rect key="frame" x="10" y="10" width="354" height="40"/>
+                                                <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="qCL-fP-uPK" kind="show" id="fQw-O5-6hb"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="oXQ-Tj-i2G" secondAttribute="bottom" id="2qm-Kg-yuh"/>
+                                            <constraint firstItem="JbT-1L-apS" firstAttribute="top" secondItem="A6e-sV-tkY" secondAttribute="top" id="5Pp-B6-cPp"/>
+                                            <constraint firstItem="JbT-1L-apS" firstAttribute="trailing" secondItem="A6e-sV-tkY" secondAttribute="trailing" id="69S-5W-C9h"/>
                                             <constraint firstAttribute="trailing" secondItem="oXQ-Tj-i2G" secondAttribute="trailing" id="LUz-Ro-SId"/>
+                                            <constraint firstItem="JbT-1L-apS" firstAttribute="bottom" secondItem="A6e-sV-tkY" secondAttribute="bottom" id="POf-qm-8Hc"/>
                                             <constraint firstItem="A6e-sV-tkY" firstAttribute="top" secondItem="3pc-ka-Fz0" secondAttribute="top" constant="10" id="TaO-Ib-uw6"/>
                                             <constraint firstAttribute="trailing" secondItem="A6e-sV-tkY" secondAttribute="trailing" constant="10" id="a9S-Ue-yKY"/>
                                             <constraint firstItem="oXQ-Tj-i2G" firstAttribute="leading" secondItem="3pc-ka-Fz0" secondAttribute="leading" id="bpN-qz-hBh"/>
                                             <constraint firstItem="oXQ-Tj-i2G" firstAttribute="top" secondItem="3pc-ka-Fz0" secondAttribute="top" id="coq-sx-2a8"/>
                                             <constraint firstItem="A6e-sV-tkY" firstAttribute="leading" secondItem="3pc-ka-Fz0" secondAttribute="leading" constant="10" id="hpr-Tg-a4J"/>
+                                            <constraint firstItem="JbT-1L-apS" firstAttribute="leading" secondItem="A6e-sV-tkY" secondAttribute="leading" id="mFh-55-Etj"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -80,7 +96,125 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="878" y="-420"/>
+            <point key="canvasLocation" x="866" y="-553"/>
+        </scene>
+        <!--SearchVC-->
+        <scene sceneID="SR3-mb-eLg">
+            <objects>
+                <viewController id="LeI-Fo-zTH" customClass="SearchVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gOZ-ta-Jmt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="BoR-P7-1f3"/>
+                    </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="wfq-tG-Opm">
+                        <barButtonItem key="leftBarButtonItem" image="backArrow" id="uWA-3f-hHc">
+                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="leftBarButtonAction:" destination="LeI-Fo-zTH" id="6ml-g7-VcT"/>
+                            </connections>
+                        </barButtonItem>
+                        <connections>
+                            <outlet property="leftBarButtonItem" destination="uWA-3f-hHc" id="BMm-8s-J4f"/>
+                            <outlet property="titleView" destination="vRD-G4-lp8" id="1Ra-uS-9ue"/>
+                        </connections>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V0e-L9-drR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchBar contentMode="redraw" preservesSuperviewLayoutMargins="YES" searchBarStyle="prominent" placeholder="From where?" id="vRD-G4-lp8">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <viewLayoutGuide key="safeArea" id="aIO-6G-1Gz"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
+            </objects>
+            <point key="canvasLocation" x="3687" y="-501"/>
+        </scene>
+        <!--Passenger DetailsVC-->
+        <scene sceneID="CUW-Yj-BSa">
+            <objects>
+                <viewController id="qCL-fP-uPK" customClass="PassengerDetailsVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cpl-dS-mcc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4UX-al-9vE">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="17g-Wm-4wp">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="602"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgView" translatesAutoresizingMaskIntoConstraints="NO" id="LCN-AT-Z5N">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="602"/>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c6d-2z-8kD">
+                                                <rect key="frame" x="10" y="10" width="354" height="50"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iGL-OJ-ytm">
+                                                        <rect key="frame" x="3" y="2" width="348" height="46"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="qCL-fP-uPK" id="B5H-7K-oeg"/>
+                                                        </connections>
+                                                    </textField>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="4rK-K0-QNN"/>
+                                                    <constraint firstAttribute="bottom" secondItem="iGL-OJ-ytm" secondAttribute="bottom" constant="2" id="Aa6-Lx-GYG"/>
+                                                    <constraint firstAttribute="trailing" secondItem="iGL-OJ-ytm" secondAttribute="trailing" constant="3" id="BWB-Pj-pBM"/>
+                                                    <constraint firstItem="iGL-OJ-ytm" firstAttribute="top" secondItem="c6d-2z-8kD" secondAttribute="top" constant="2" id="als-jp-EjX"/>
+                                                    <constraint firstItem="iGL-OJ-ytm" firstAttribute="leading" secondItem="c6d-2z-8kD" secondAttribute="leading" constant="3" id="bBJ-pO-qPt"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="25"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="c6d-2z-8kD" firstAttribute="top" secondItem="17g-Wm-4wp" secondAttribute="top" constant="10" id="2is-GN-xvm"/>
+                                            <constraint firstItem="LCN-AT-Z5N" firstAttribute="leading" secondItem="17g-Wm-4wp" secondAttribute="leading" id="DuT-Ha-12a"/>
+                                            <constraint firstItem="LCN-AT-Z5N" firstAttribute="top" secondItem="17g-Wm-4wp" secondAttribute="top" id="IOK-oN-wl8"/>
+                                            <constraint firstAttribute="trailing" secondItem="c6d-2z-8kD" secondAttribute="trailing" constant="10" id="aQt-35-9Wj"/>
+                                            <constraint firstAttribute="bottom" secondItem="LCN-AT-Z5N" secondAttribute="bottom" id="gXy-SC-T62"/>
+                                            <constraint firstItem="c6d-2z-8kD" firstAttribute="leading" secondItem="17g-Wm-4wp" secondAttribute="leading" constant="10" id="qD2-Ww-d9i"/>
+                                            <constraint firstAttribute="trailing" secondItem="LCN-AT-Z5N" secondAttribute="trailing" id="y2b-a2-ZzM"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="17g-Wm-4wp" firstAttribute="centerY" secondItem="4UX-al-9vE" secondAttribute="centerY" id="5b0-Nx-IBA"/>
+                                    <constraint firstItem="17g-Wm-4wp" firstAttribute="centerX" secondItem="4UX-al-9vE" secondAttribute="centerX" id="LZs-uN-rhl"/>
+                                    <constraint firstAttribute="bottom" secondItem="17g-Wm-4wp" secondAttribute="bottom" id="Zpk-zn-WAV"/>
+                                    <constraint firstAttribute="trailing" secondItem="17g-Wm-4wp" secondAttribute="trailing" id="d4o-pA-K8D"/>
+                                    <constraint firstItem="17g-Wm-4wp" firstAttribute="top" secondItem="4UX-al-9vE" secondAttribute="top" id="neq-Hy-edo"/>
+                                    <constraint firstItem="17g-Wm-4wp" firstAttribute="leading" secondItem="4UX-al-9vE" secondAttribute="leading" id="u9n-Rf-JjN"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IsO-Mp-E0d" firstAttribute="trailing" secondItem="4UX-al-9vE" secondAttribute="trailing" id="1pS-BH-Exw"/>
+                            <constraint firstItem="4UX-al-9vE" firstAttribute="leading" secondItem="IsO-Mp-E0d" secondAttribute="leading" id="52I-d0-5Cd"/>
+                            <constraint firstItem="4UX-al-9vE" firstAttribute="top" secondItem="IsO-Mp-E0d" secondAttribute="top" id="Fw5-ay-Quy"/>
+                            <constraint firstItem="IsO-Mp-E0d" firstAttribute="bottom" secondItem="4UX-al-9vE" secondAttribute="bottom" id="KpN-nU-dOb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="IsO-Mp-E0d"/>
+                    </view>
+                    <connections>
+                        <outlet property="firstNameTF" destination="iGL-OJ-ytm" id="3kS-hE-cem"/>
+                        <outlet property="firstNameView" destination="c6d-2z-8kD" id="yW3-qS-udy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f8A-Ew-Qrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2522" y="-638"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="33X-ZN-U6y">
@@ -126,6 +260,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backArrow" width="40" height="40"/>
         <image name="bgView" width="800" height="1200"/>
     </resources>
 </document>
