--- a/LDA/LDA/Base.lproj/Main.storyboard
+++ b/LDA/LDA/Base.lproj/Main.storyboard
@@ -157,6 +157,39 @@
             </objects>
             <point key="canvasLocation" x="3687" y="-501"/>
         </scene>
+        <!--Web ViewVC-->
+        <scene sceneID="8OD-Gj-1XB">
+            <objects>
+                <viewController id="XhW-vO-qK1" customClass="WebViewVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yfJ-9O-R6g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KjG-Bv-Lht">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="XhW-vO-qK1" id="dSj-Wf-WzY"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KjG-Bv-Lht" firstAttribute="leading" secondItem="1PM-fg-v9A" secondAttribute="leading" id="4qR-Bn-vO0"/>
+                            <constraint firstItem="1PM-fg-v9A" firstAttribute="bottom" secondItem="KjG-Bv-Lht" secondAttribute="bottom" id="9Sz-ct-CzI"/>
+                            <constraint firstItem="KjG-Bv-Lht" firstAttribute="top" secondItem="1PM-fg-v9A" secondAttribute="top" id="9my-AJ-UkR"/>
+                            <constraint firstItem="1PM-fg-v9A" firstAttribute="trailing" secondItem="KjG-Bv-Lht" secondAttribute="trailing" id="zPh-M0-d65"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1PM-fg-v9A"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="KjG-Bv-Lht" id="f4C-cU-VkB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3qZ-mB-9DE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4426" y="-579"/>
+        </scene>
         <!--Passenger DetailsVC-->
         <scene sceneID="CUW-Yj-BSa">
             <objects>
@@ -360,19 +393,27 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FI6-X9-zAG">
-                                                <rect key="frame" x="10" y="550" width="30" height="30"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FI6-X9-zAG">
+                                                <rect key="frame" x="10" y="550" width="24" height="30"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="30" id="UtD-a5-qoC"/>
                                                     <constraint firstAttribute="height" constant="30" id="pDV-xc-i1e"/>
                                                 </constraints>
-                                                <state key="normal" title="Button"/>
+                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" image="checkBoxunselected"/>
+                                                <state key="selected" image="checkBoxSelected"/>
+                                                <connections>
+                                                    <action selector="agreeButtonAction:" destination="qCL-fP-uPK" eventType="touchUpInside" id="Cl5-Kt-mft"/>
+                                                </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I AGREE TO THE USER AGREEMENT TERMS." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTY-7z-Bn5">
-                                                <rect key="frame" x="45" y="556.5" width="295" height="18"/>
-                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
+                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I AGREE TO THE USER AGREEMENT TERMS." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTY-7z-Bn5">
+                                                <rect key="frame" x="39" y="557.5" width="275.5" height="16.5"/>
+                                                <gestureRecognizers/>
+                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="Nav-ye-x7C" appends="YES" id="GNf-Dv-sXP"/>
+                                                </connections>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s4q-ND-VdO">
                                                 <rect key="frame" x="10" y="610" width="354" height="44"/>
@@ -454,6 +495,7 @@
                         <viewLayoutGuide key="safeArea" id="IsO-Mp-E0d"/>
                     </view>
                     <connections>
+                        <outlet property="agreeButton" destination="FI6-X9-zAG" id="CAw-c7-u4R"/>
                         <outlet property="alternativePhoneTF" destination="Bd3-Yz-8XA" id="HEE-G5-lS3"/>
                         <outlet property="alternativePhoneView" destination="vai-UD-uZw" id="RFj-LG-HOi"/>
                         <outlet property="commentTextView" destination="N82-Hi-vSb" id="0DJ-PT-oXL"/>
@@ -468,12 +510,18 @@
                         <outlet property="phoneView" destination="Zn7-Af-KwZ" id="Knl-0R-joG"/>
                         <outlet property="preferredFlightTF" destination="qnS-u3-r0F" id="xr5-KJ-59W"/>
                         <outlet property="preferredFlightView" destination="5gn-XX-ZDV" id="rdc-GR-TIJ"/>
+                        <segue destination="XhW-vO-qK1" kind="show" identifier="passengerDetailsToWebView" id="Gjg-KW-fb1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f8A-Ew-Qrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="wVL-gJ-BpB">
                     <connections>
                         <action selector="tapGestureAction:" destination="qCL-fP-uPK" id="bPg-0u-enF"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="Nav-ye-x7C">
+                    <connections>
+                        <action selector="agreeTapGestureAction:" destination="qCL-fP-uPK" id="Ekt-Fg-Xwv"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
@@ -525,5 +573,7 @@
     <resources>
         <image name="backArrow" width="40" height="40"/>
         <image name="bgView" width="800" height="1200"/>
+        <image name="checkBoxSelected" width="24" height="24"/>
+        <image name="checkBoxunselected" width="24" height="24"/>
     </resources>
 </document>
